--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="app_background">#FAFAFA</color>
-    <color name="text_dark">#212121</color>
-    <color name="text_light">#424242</color>
-    <color name="income_green">#2E7D32</color>
-    <color name="expense_red">#C62828</color>
-    <color name="rowAlternate">#FFF5F5F5</color>
-    <color name="accent">#1976D2</color>
-    <color name="item_background">#FFFFFF</color>
+    <color name="primary">#2196F3</color>
+    <color name="primary_dark">#1976D2</color>
+    <color name="accent">#03A9F4</color>
+    <color name="background_light">#FFFFFF</color>
+    <color name="background_dark">#121212</color>
 </resources>
