--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- تم پایه -->
+    <!-- تم اصلی -->
     <style name="Theme.Hesab" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:fontFamily">@font/vazir</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryContainer">@color/primary_dark</item>
         <item name="colorSecondary">@color/accent</item>
-        <item name="android:statusBarColor">?attr/colorPrimary</item>
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
+        <item name="android:colorBackground">@color/background_light</item>
     </style>
 
-    <!-- تم‌های مختلف -->
+    <!-- حالت‌ها -->
     <style name="Theme.Hesab.LightBlue" parent="Theme.Hesab">
         <item name="colorPrimary">#64B5F6</item>
         <item name="colorSecondary">#2196F3</item>
@@ -22,13 +21,9 @@
     </style>
 
     <style name="Theme.Hesab.Dark" parent="Theme.Hesab">
+        <item name="android:colorBackground">@color/background_dark</item>
         <item name="colorPrimary">#212121</item>
         <item name="colorSecondary">#757575</item>
-    </style>
-
-    <style name="Theme.Hesab.Light" parent="Theme.Hesab">
-        <item name="colorPrimary">#FAFAFA</item>
-        <item name="colorSecondary">#E0E0E0</item>
     </style>
 
 </resources>
