--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -41,7 +41,7 @@
         <item name="android:statusBarColor">#000000</item>
         <item name="android:navigationBarColor">#000000</item>
         <item name="android:windowLightStatusBar">false</item>
-        <item name="android:fontFamily">@font/system</item>
+        <item name="android:fontFamily">@font/vazir</item> <!-- ✅ اصلاح شد -->
     </style>
 
 </resources>
