--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- فقط استایل فونت‌ها -->
-    <style name="Font.IranSans">
-        <item name="android:fontFamily">@font/iransans</item>
-    </style>
 
-    <style name="Font.Vazir">
+    <!-- استایل اصلی برنامه -->
+    <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:colorBackground">#F5F9FF</item>
+        <item name="colorPrimary">#2196F3</item>
+        <item name="colorSecondary">#03A9F4</item>
+        <item name="colorSurface">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="Font.Diana">
-        <item name="android:fontFamily">@font/diana</item>
+    <!-- نسخه تاریک -->
+    <style name="Theme.Hesab.DarkBlue" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:colorBackground">#121212</item>
+        <item name="colorPrimary">#90CAF9</item>
+        <item name="colorSecondary">#64B5F6</item>
+        <item name="colorSurface">#1E1E1E</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
+
 </resources>
