--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,33 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- تم پایه -->
-    <style name="Theme.Hesab" parent="Theme.Material3.DayNight.NoActionBar">
+    <!-- تم روشن -->
+    <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:fontFamily">@font/vazir</item>
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryContainer">@color/primary_dark</item>
-        <item name="colorSecondary">@color/accent</item>
-        <item name="android:colorBackground">@color/background_light</item>
+        <item name="android:colorBackground">#F5F9FF</item>
+        <item name="colorPrimary">#2196F3</item>
+        <item name="colorSecondary">#03A9F4</item>
+        <item name="colorSurface">#FFFFFF</item>
+        <item name="android:textColor">#000000</item>
     </style>
 
-    <!-- حالت آبی روشن -->
-    <style name="Theme.Hesab.LightBlue" parent="Theme.Hesab">
-        <item name="colorPrimary">#64B5F6</item>
-        <item name="colorSecondary">#2196F3</item>
-        <item name="android:colorBackground">#F3F8FE</item>
-    </style>
-
-    <!-- حالت سبز نرم -->
-    <style name="Theme.Hesab.SoftGreen" parent="Theme.Hesab">
-        <item name="colorPrimary">#81C784</item>
-        <item name="colorSecondary">#388E3C</item>
-        <item name="android:colorBackground">#F4FFF5</item>
-    </style>
-
-    <!-- حالت تیره -->
-    <style name="Theme.Hesab.Dark" parent="Theme.Hesab">
+    <!-- تم تیره -->
+    <style name="Theme.Hesab.DarkBlue" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="android:fontFamily">@font/vazir</item>
         <item name="android:colorBackground">#121212</item>
-        <item name="colorPrimary">#212121</item>
-        <item name="colorSecondary">#757575</item>
+        <item name="colorPrimary">#90CAF9</item>
+        <item name="colorSecondary">#64B5F6</item>
+        <item name="colorSurface">#1E1E1E</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
 </resources>
