--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- استایل اصلی برنامه -->
-    <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.Light.NoActionBar">
+    <!-- استایل‌های عمومی ویوها -->
+    <style name="TextViewDefault" parent="TextAppearance.Material3.BodyMedium">
+        <item name="android:textColor">#FFFFFF</item>
         <item name="android:fontFamily">@font/vazir</item>
-        <item name="android:colorBackground">#F5F9FF</item>
-        <item name="colorPrimary">#2196F3</item>
-        <item name="colorSecondary">#03A9F4</item>
-        <item name="colorSurface">#FFFFFF</item>
-        <item name="android:textColor">#000000</item>
     </style>
 
-    <!-- نسخه تاریک -->
-    <style name="Theme.Hesab.DarkBlue" parent="Theme.Material3.Dark.NoActionBar">
-        <item name="android:fontFamily">@font/vazir</item>
-        <item name="android:colorBackground">#121212</item>
-        <item name="colorPrimary">#90CAF9</item>
-        <item name="colorSecondary">#64B5F6</item>
-        <item name="colorSurface">#1E1E1E</item>
+    <style name="EditTextDefault" parent="Widget.Material3.TextInputEditText.OutlinedBox">
         <item name="android:textColor">#FFFFFF</item>
+        <item name="android:fontFamily">@font/vazir</item>
     </style>
 
 </resources>
