--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,62 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:padding="8dp"
-    android:background="@color/item_background">
+    android:background="?android:attr/selectableItemBackground">
 
-    <!-- سه نقطه منو (چپ ردیف) -->
-    <ImageView
-        android:id="@+id/ivMenu"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:src="@drawable/ic_more_vert"
-        android:contentDescription="menu"
-        android:tint="@color/text_dark" />
-
-    <!-- ستون توضیحات -->
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="0dp"
-        android:layout_weight="3"
-        android:layout_height="wrap_content"
-        android:text="توضیحات نمونه"
-        android:textSize="14sp"
-        android:gravity="center"
-        android:textColor="@color/text_light" />
-
-    <!-- ستون بابت -->
-    <TextView
-        android:id="@+id/tvCategory"
-        android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="wrap_content"
-        android:text="بابت"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:textColor="@color/text_dark" />
-
-    <!-- ستون مبلغ -->
-    <TextView
-        android:id="@+id/tvAmount"
-        android:layout_width="0dp"
-        android:layout_weight="2"
-        android:layout_height="wrap_content"
-        android:text="1,000"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:textColor="@color/text_dark" />
-
-    <!-- ستون تاریخ -->
     <TextView
         android:id="@+id/tvDate"
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="wrap_content"
-        android:text="1404/08/01"
-        android:textSize="14sp"
-        android:gravity="center"
-        android:textColor="@color/text_dark" />
+        android:layout_weight="2"
+        android:text="1403/08/12"
+        android:textAlignment="center"
+        android:textSize="14sp" />
 
-</TableRow>
+    <TextView
+        android:id="@+id/tvAmount"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:text="250,000"
+        android:textAlignment="center"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tvCategory"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:text="خرید"
+        android:textAlignment="center"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/tvNote"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:text="توضیحات"
+        android:textAlignment="center"
+        android:textSize="14sp" />
+
+</LinearLayout>
