--- a/app/src/main/res/drawable/ic_more_vert.xml
+++ b/app/src/main/res/drawable/ic_more_vert.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#000"
-        android:pathData="M12,8a2,2 0 1,0 0,-4 2,2 0 0,0 0,4zM12,14a2,2 0 1,0 0,-4 2,2 0 0,0 0,4zM12,20a2,2 0 1,0 0,-4 2,2 0 0,0 0,4z" />
+        android:pathData="M12,8a2,2 0 1,0 0,-4a2,2 0 0,0 0,4zM12,14a2,2 0 1,0 0,-4a2,2 0 0,0 0,4zM12,20a2,2 0 1,0 0,-4a2,2 0 0,0 0,4z" />
 </vector>
