--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,9 +23,13 @@
     <color name="dark_background">#121212</color>
     <color name="dark_text">#E0E0E0</color>
 
-        <!-- رنگ‌های تراکنش -->
+    <!-- رنگ‌های تراکنش -->
     <color name="income_green">#2E7D32</color> <!-- سبز برای درآمد -->
     <color name="expense_red">#C62828</color> <!-- قرمز برای هزینه -->
     <color name="item_background">#FFFFFF</color> <!-- پس‌زمینه ردیف -->
+
+    <!-- رنگ‌های جدید برای Toolbar و دکمه + -->
+    <color name="primary_light_blue">#4FC3F7</color>
+    <color name="background_light">#FAFAFA</color>
 
 </resources>
