--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- تم روشن -->
+    <!-- تم روشن اصلی -->
     <style name="Theme.Hesab.LightBlue" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:colorBackground">#F5F9FF</item>
-        <item name="android:fontFamily">@font/vazir</item>
+        <item name="android:fontFamily">@font/iran_sans_regular</item>
         <item name="colorPrimary">#2196F3</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#03A9F4</item>
@@ -16,7 +16,7 @@
     <!-- تم سبز -->
     <style name="Theme.Hesab.SoftGreen" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:colorBackground">#E8F5E9</item>
-        <item name="android:fontFamily">@font/iransans</item>
+        <item name="android:fontFamily">@font/iran_sans_regular</item>
         <item name="colorPrimary">#4CAF50</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#2E7D32</item>
@@ -28,25 +28,13 @@
     <!-- تم تاریک -->
     <style name="Theme.Hesab.Dark" parent="Theme.Material3.Dark.NoActionBar">
         <item name="android:colorBackground">#000000</item>
-        <item name="android:fontFamily">@font/diana</item>
+        <item name="android:fontFamily">@font/iran_sans_regular</item>
         <item name="colorPrimary">#000000</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#333333</item>
         <item name="android:statusBarColor">#000000</item>
         <item name="android:navigationBarColor">#000000</item>
         <item name="android:windowLightStatusBar">false</item>
-    </style>
-
-    <!-- تم خاکستری -->
-    <style name="Theme.Hesab.Light" parent="Theme.Material3.Light.NoActionBar">
-        <item name="android:colorBackground">#FAFAFA</item>
-        <item name="android:fontFamily">@font/vazir</item>
-        <item name="colorPrimary">#B0BEC5</item>
-        <item name="colorOnPrimary">#000000</item>
-        <item name="colorSecondary">#90A4AE</item>
-        <item name="android:statusBarColor">#B0BEC5</item>
-        <item name="android:navigationBarColor">#B0BEC5</item>
-        <item name="android:windowLightStatusBar">true</item>
     </style>
 
 </resources>
