--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -4,8 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:background="?android:attr/selectableItemBackground"
-    android:fontFamily="@font/iran_sans_regular">
+    android:background="?android:attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/tvDate"
@@ -14,8 +13,7 @@
         android:layout_weight="2"
         android:text="1403/08/12"
         android:textAlignment="center"
-        android:textSize="14sp"
-        android:fontFamily="@font/iran_sans_medium" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tvAmount"
@@ -24,8 +22,7 @@
         android:layout_weight="2"
         android:text="250,000"
         android:textAlignment="center"
-        android:textSize="14sp"
-        android:fontFamily="@font/iran_sans_bold" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tvCategory"
@@ -34,8 +31,7 @@
         android:layout_weight="2"
         android:text="خرید"
         android:textAlignment="center"
-        android:textSize="14sp"
-        android:fontFamily="@font/iran_sans_regular" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tvNote"
@@ -44,7 +40,14 @@
         android:layout_weight="3"
         android:text="توضیحات"
         android:textAlignment="center"
-        android:textSize="14sp"
-        android:fontFamily="@font/iran_sans_regular" />
+        android:textSize="14sp" />
+
+    <ImageButton
+        android:id="@+id/menuButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_more_vert"
+        android:contentDescription="منو"
+        android:background="?attr/selectableItemBackgroundBorderless" />
 
 </LinearLayout>
